[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.1.0-5

--- a/packages/mixin-jsbridge-sdk/docs/2.api.md
+++ b/packages/mixin-jsbridge-sdk/docs/2.api.md
@@ -5,8 +5,10 @@
 | 名称 | 功能说明 | 备注 |
 | --- | --- | --- |
 | login | 跳转到oauth认证页去登陆 | - |
+| logout | 登出 | - |
 | token | 获取access-token | - |
 | requestToken | 用code换取token | - |
+| getUserInfo | 获取用户信息 | - |
 | getContext | 在 mixin app 内获取上下文对象 | - |
 | reloadTheme | 重载theme | - |
 | playlist | 打开音频播放列表 | - |
@@ -54,8 +56,16 @@ const bridge = new Bridge({
   bridge.login(auth: Auth, params?: Params);
   ```
 
+### logout
+登出
+- 使用
+  ```typescript
+  const isReload = false;
+  bridge.logout(isReload);
+  ```
+
 ### token
-获取 `access-token`，当然一开始得先调用 `requestToken` 来换取 token。
+获取 `access-token`，当然一开始得先调用 `requestToken` 来换取 token
 - 使用
   ```typescript
   const token = bridge.token;
@@ -81,6 +91,13 @@ const bridge = new Bridge({
 
   // persistence 是否做持久化，默认 true
   bridge.requestToken(params?: Params, persistence?: boolean);
+  ```
+
+### getUserInfo
+获取用户信息，请确保 `access_token` 有效
+- 使用
+  ```typescript
+  const userInfo = await bridge.getUserInfo();
   ```
 
 ### getContext
