[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.1.0

--- a/packages/mixin-jsbridge-sdk/docs/1.md
+++ b/packages/mixin-jsbridge-sdk/docs/1.md
@@ -1,17 +1,19 @@
-# 快速开始
+# Quick Start
 
-## 安装
+## Install
 
 ```shell
 yarn add @foxone/mixin-sdk-jsbridge
 ```
 
-## 使用
+## Usage
 `src/index.ts`：
 ```typescript
 import Bridge from '@foxone/mixin-sdk-jsbridge';
 
-const bridge = new Bridge();
+const bridge = new Bridge({
+  client_id: 'your mixin rebot id'
+});
 
 bridge.getContext(); // get app context 
 
