[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.1.1

--- a/packages/mixin-jsbridge-sdk/docs/2.md
+++ b/packages/mixin-jsbridge-sdk/docs/2.md
@@ -2,6 +2,7 @@
 
 | name | desc | type | default | version |
 | --- | --- | --- | --- | --- |
+| version | the jsbridge-sdk version | `string` | `unknown` |  |
 | login | go login | `function(auth: AUTH, params?: LoginParams)` | - |  |
 | logout | do logout | `function(reload = true)` | - |  |
 | token | get mixin access-token | `string` | `undefined` |  |
