--- a/packages/mixin-jsbridge-sdk/docs/2.zh-CN.md
+++ b/packages/mixin-jsbridge-sdk/docs/2.zh-CN.md
@@ -2,6 +2,7 @@
 
 | 名称 | 功能说明 | 类型 | 默认 | 版本 |
 | --- | --- | --- | --- | --- |
+| version | jsbridge-sdk 的版本号 | `string` | `unknown` |  |
 | login | 跳转到oauth认证页去登陆 | `function(auth: AUTH, params?: LoginParams)` | - |  |
 | logout | 登出 | `function(reload = true)` | - |  |
 | token | 获取access-token | `string` | `undefined` |  |
