[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.1.2

--- a/packages/mixin-jsbridge-sdk/docs/2.md
+++ b/packages/mixin-jsbridge-sdk/docs/2.md
@@ -23,9 +23,8 @@ Jump to the OAuth page, ask the user authorization confirm, and then redirect ba
     profile?: boolean; // ask for user's phone profile
     contacts?: boolean; // ask for user's contacts
     assets?: boolean; // ask for user's assets
-    snapshots?: boolean; // ask for user's snapshots
-    messages?: boolean; // ask for user's messages
-    represent?: boolean; // ask for user's represent
+    snapshots?: boolean; // ask for user's transfer records
+    messages?: boolean; // allow rebot represent you to send message
   };
 
   type LoginParams = {
