--- a/packages/mixin-jsbridge-sdk/docs/2.zh-CN.md
+++ b/packages/mixin-jsbridge-sdk/docs/2.zh-CN.md
@@ -21,10 +21,9 @@
     phone?: boolean; // 获取用户手机号
     profile?: boolean; // 获取用户详细信息
     contacts?: boolean; // 获取用户通讯录
-    assets?: boolean; // 获取用户手资产情况
-    snapshots?: boolean; // 获取用户截图
-    messages?: boolean; // 获取用户消息
-    represent?: boolean; // 获取用户截图授权
+    assets?: boolean; // 获取用户资产情况
+    snapshots?: boolean; // 获取用户转账记录
+    messages?: boolean; // 允许机器人代发消息
   };
 
   type LoginParams = {
@@ -43,7 +42,8 @@
     profile: true,
     contacts: false,
     assets: true,
-    snapshots: false
+    snapshots: false,
+    messages: false
   }
 
   bridge.login(auth, { redirect_url: 'https://localhost:3000' });
