--- a/packages/sdk/docs/1.md
+++ b/packages/sdk/docs/1.md
@@ -15,7 +15,7 @@ const bridge = new Bridge({
   client_id: 'your mixin rebot id'
 });
 
-bridge.getContext(); // get app context 
+bridge.getContext();
 
 // ……
 ```
