--- a/packages/sdk/docs/1.zh-CN.md
+++ b/packages/sdk/docs/1.zh-CN.md
@@ -15,7 +15,7 @@ const bridge = new Bridge({
   client_id: '此处填你的 mixin 机器人 id'
 });
 
-bridge.getContext(); // get app context 
+bridge.getContext();
 
 // ……
 ```
