--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -3,7 +3,7 @@
 | 名称 | 功能说明 | 类型 | 默认 | 版本 |
 | --- | --- | --- | --- | --- |
 | version | jsbridge-sdk 的版本号 | `string` | `unknown` |  |
-| login | 跳转到oauth认证页去登陆 | `function(auth: AUTH, params?: LoginParams)` | - |  |
+| login | 跳转到 OAuth认证页 去登陆 | `function(auth: AUTH, params?: LoginParams)` | - |  |
 | logout | 登出 | `function(reload = true)` | - |  |
 | token | 获取access-token | `string` | `undefined` |  |
 | requestToken | 用code换取token | `function(params?: ReqTokenParams, persistence = true)` | - |  |
@@ -13,7 +13,7 @@
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
 
 ### login
-跳转到 oauth 页面，让并让用户授权登陆，而后重定向回到指定 `redirect_url` 的页面中
+跳转到 OAuth 页面，让并让用户授权登陆，而后重定向回到指定 `redirect_url` 的页面中
 
 - 参数类型
   ```typescript
