[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.1.4

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -3,6 +3,8 @@
 | name | desc | type | default | version |
 | --- | --- | --- | --- | --- |
 | version | the jsbridge-sdk version | `string` | `unknown` |  |
+| conversationId | the conversation id | `string` | `undefined` |  |
+| isMixin | judgement whether or not in mixin or reborn app | `boolean` | - |  |
 | login | go login | `function(auth: AUTH, params?: LoginParams)` | - |  |
 | logout | do logout | `function(reload = true)` | - |  |
 | token | get mixin access-token | `string` | `undefined` |  |
@@ -12,6 +14,29 @@
 | reloadTheme | reload the theme according to theme-color | `function()` | - |  |
 | playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
 
+### version
+the jsbridge-sdk version
+
+- example
+  ```typescript
+  console.info(bridge.version); // 0.1.3
+  ```
+
+### conversationId
+the conversation id that actually could access in context
+
+- example
+  ```typescript
+  console.info(bridge.conversationId);
+  ```
+
+### version
+judgement whether or not in mixin or reborn app
+
+- example
+  ```typescript
+  console.info(bridge.isMixin); // true
+  ```
 
 ### login
 Jump to the OAuth page, ask the user authorization confirm, and then redirect back to the page which specified `redirect_url`
