--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -3,6 +3,8 @@
 | 名称 | 功能说明 | 类型 | 默认 | 版本 |
 | --- | --- | --- | --- | --- |
 | version | jsbridge-sdk 的版本号 | `string` | `unknown` |  |
+| conversationId | conversation id | `string` | `undefined` |  |
+| isMixin | 判断是否在 mixin 或者 reborn App 内 | `boolean` | - |  |
 | login | 跳转到 OAuth认证页 去登陆 | `function(auth: AUTH, params?: LoginParams)` | - |  |
 | logout | 登出 | `function(reload = true)` | - |  |
 | token | 获取access-token | `string` | `undefined` |  |
@@ -11,6 +13,30 @@
 | getContext | 在 mixin app 内获取上下文对象 | `function()` | - |  |
 | reloadTheme | 重载 mixin 的主体色 | `function()` | - |  |
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
+
+### version
+jsbridge-sdk 的版本号
+
+- example
+  ```typescript
+  console.info(bridge.version); // 0.1.3
+  ```
+
+### conversationId
+conversation id 实际上是通过 getContext 获取的
+
+- example
+  ```typescript
+  console.info(bridge.conversationId);
+  ```
+
+### version
+判断是否在 mixin 或者 reborn App 内
+
+- example
+  ```typescript
+  console.info(bridge.isMixin); // true
+  ```
 
 ### login
 跳转到 OAuth 页面，让并让用户授权登陆，而后重定向回到指定 `redirect_url` 的页面中
