--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -30,7 +30,7 @@ the conversation id that actually could access in context
   console.info(bridge.conversationId);
   ```
 
-### version
+### isMixin
 judgement whether or not in mixin or reborn app
 
 - example
