--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -30,7 +30,7 @@ conversation id 实际上是通过 getContext 获取的
   console.info(bridge.conversationId);
   ```
 
-### version
+### isMixin
 判断是否在 mixin 或者 reborn App 内
 
 - example
