--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -27,7 +27,7 @@ the conversation id that actually could access in context
 
 - example
   ```typescript
-  console.info(bridge.conversationId);
+  console.info(bridge.conversationId); // 51e0e886-fba7-3732-804f-2686e5bb459e
   ```
 
 ### isMixin
