--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -17,7 +17,7 @@
 ### version
 jsbridge-sdk 的版本号
 
-- example
+- 使用示例
   ```typescript
   console.info(bridge.version); // 0.1.3
   ```
@@ -25,15 +25,15 @@ jsbridge-sdk 的版本号
 ### conversationId
 conversation id 实际上是通过 getContext 获取的
 
-- example
+- 使用示例
   ```typescript
-  console.info(bridge.conversationId);
+  console.info(bridge.conversationId); // 51e0e886-fba7-3732-804f-2686e5bb459e
   ```
 
 ### isMixin
 判断是否在 mixin 或者 reborn App 内
 
-- example
+- 使用示例
   ```typescript
   console.info(bridge.isMixin); // true
   ```
