login support custom host

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -53,9 +53,10 @@ Jump to the OAuth page, ask the user authorization confirm, and then redirect ba
   };
 
   type LoginParams = {
-    client_id?: string;
-    redirect_url?: string;
-    state?: string;
+    login_host?: string; // login url host, default is `https://mixin-oauth.firesbox.com`
+    client_id?: string; // the client id which can be found at mixin developer platform
+    redirect_url?: string; // redirect url
+    state?: string; // oauth state
   };
 
   bridge.login(auth: Auth, params?: LoginParams);
