--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -53,9 +53,10 @@ conversation id 实际上是通过 getContext 获取的
   };
 
   type LoginParams = {
-    client_id?: string;
-    redirect_url?: string;
-    state?: string;
+    login_host?: string; // 登陆地址的host，默认为 `https://mixin-oauth.firesbox.com`
+    client_id?: string; // client id，可在 mixin 开发者平台中获取
+    redirect_url?: string; // 重定向 url
+    state?: string; // oauth state
   };
 
   bridge.login(auth: Auth, params?: LoginParams);
