--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -53,7 +53,7 @@ Jump to the OAuth page, ask the user authorization confirm, and then redirect ba
   };
 
   type LoginParams = {
-    login_host?: string; // login url host, default is `https://mixin-oauth.firesbox.com`
+    oauth_url?: string; // oauth address which contain protocol and host, default is `https://mixin-oauth.firesbox.com`
     client_id?: string; // the client id which can be found at mixin developer platform
     redirect_url?: string; // redirect url
     state?: string; // oauth state
