--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -53,7 +53,7 @@ conversation id 实际上是通过 getContext 获取的
   };
 
   type LoginParams = {
-    login_host?: string; // 登陆地址的host，默认为 `https://mixin-oauth.firesbox.com`
+    oauth_url?: string; // oauth的 protocol + host，默认为 `https://mixin-oauth.firesbox.com`
     client_id?: string; // client id，可在 mixin 开发者平台中获取
     redirect_url?: string; // 重定向 url
     state?: string; // oauth state
