[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.2.0

--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -13,6 +13,7 @@
 | getContext | 在 mixin app 内获取上下文对象 | `function()` | - |  |
 | reloadTheme | 重载 mixin 的主体色 | `function()` | - |  |
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
+| payment | 通过生成 schema-url 来唤起支付 | `function(params: PARAMS_PAYMENT)` | - |  |
 
 ### version
 jsbridge-sdk 的版本号
@@ -104,7 +105,7 @@ conversation id 实际上是通过 getContext 获取的
     code?: string;
     client_id?: string;
     code_verifier?: string;
-  },  = true
+  };
 
   // persistence 是否做持久化，默认 true
   bridge.requestToken(params?: ReqTokenParams, persistence?: boolean);
@@ -164,4 +165,29 @@ conversation id 实际上是通过 getContext 获取的
     'https://audio.2.mp3',
     'https://audio.3s.mp3',
   ]);
+  ```
+
+### payment
+通过生成 schema-url 来唤起支付
+
+- 参数类型
+  ```typescript
+  type PARAMS_PAYMENT = {
+    recipient: string;
+    assetId: string;
+    amount: string;
+    traceId?: string;
+    memo?: string | Record<string, string>;
+  }
+
+  bridge.payment(params?: PARAMS_PAYMENT);
+  ```
+
+- 使用示例
+  ```typescript
+  bridge.payment({
+    recipient: 'a753e0eb-1111-2222-3333-a7bda9993f62',
+    assetId: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
+    amount: '0.001'
+  });
   ```
