--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -13,6 +13,7 @@
 | getContext | get mixin app context | `function()` | - |  |
 | reloadTheme | reload the theme according to theme-color | `function()` | - |  |
 | playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
+| payment | evoke payment checkout by generate pay schema-url | `function(params: PARAMS_PAYMENT)` | - |  |
 
 ### version
 the jsbridge-sdk version
@@ -161,4 +162,29 @@ Play audio(s) by mixin native player
     'https://audio.2.mp3',
     'https://audio.3s.mp3',
   ]);
+  ```
+
+### payment
+evoke payment checkout by generate pay schema-url
+
+- types
+  ```typescript
+  type PARAMS_PAYMENT = {
+    recipient: string;
+    assetId: string;
+    amount: string;
+    traceId?: string;
+    memo?: string | Record<string, string>;
+  }
+
+  bridge.payment(params?: PARAMS_PAYMENT);
+  ```
+
+- example
+  ```typescript
+  bridge.payment({
+    recipient: 'a753e0eb-1111-2222-3333-a7bda9993f62',
+    assetId: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
+    amount: '0.001'
+  });
   ```
