[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.2.3

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -171,9 +171,9 @@ evoke payment checkout by generate pay schema-url
   ```typescript
   type PARAMS_PAYMENT = {
     recipient: string;
-    assetId: string;
+    asset: string;
     amount: string;
-    traceId?: string;
+    trace?: string;
     memo?: string | Record<string, string>;
   }
 
