--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -174,9 +174,9 @@ conversation id 实际上是通过 getContext 获取的
   ```typescript
   type PARAMS_PAYMENT = {
     recipient: string;
-    assetId: string;
+    asset: string;
     amount: string;
-    traceId?: string;
+    trace?: string;
     memo?: string | Record<string, string>;
   }
 
