--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -173,10 +173,10 @@ conversation id 实际上是通过 getContext 获取的
 - 参数类型
   ```typescript
   type PARAMS_PAYMENT = {
-    recipient: string;
-    asset: string;
+    recipient: string; // recipient id
+    asset: string; // asset id
     amount: string;
-    trace?: string;
+    trace?: string; // trace id 确保生成唯一的转账
     memo?: string | Record<string, string>;
   }
 
@@ -187,7 +187,7 @@ conversation id 实际上是通过 getContext 获取的
   ```typescript
   bridge.payment({
     recipient: 'a753e0eb-1111-2222-3333-a7bda9993f62',
-    assetId: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
+    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
     amount: '0.001'
   });
   ```
