--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -170,10 +170,10 @@ evoke payment checkout by generate pay schema-url
 - types
   ```typescript
   type PARAMS_PAYMENT = {
-    recipient: string;
-    asset: string;
+    recipient: string; // recipient id
+    asset: string; // asset id
     amount: string;
-    trace?: string;
+    trace?: string; // trace id for unique transfer
     memo?: string | Record<string, string>;
   }
 
@@ -184,7 +184,7 @@ evoke payment checkout by generate pay schema-url
   ```typescript
   bridge.payment({
     recipient: 'a753e0eb-1111-2222-3333-a7bda9993f62',
-    assetId: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
+    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
     amount: '0.001'
   });
   ```
