[MIXIN-JSBRIDGE-BOT]: 0.1.0

--- a/packages/sdk/docs/1.md
+++ b/packages/sdk/docs/1.md
@@ -12,7 +12,7 @@ yarn add @foxone/mixin-sdk-jsbridge
 import Bridge from '@foxone/mixin-sdk-jsbridge';
 
 const bridge = new Bridge({
-  client_id: 'your mixin rebot id'
+  client_id: 'your mixin bot id'
 });
 
 bridge.getContext();
