--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -50,7 +50,7 @@ Jump to the OAuth page, ask the user authorization confirm, and then redirect ba
     contacts?: boolean; // ask for user's contacts
     assets?: boolean; // ask for user's assets
     snapshots?: boolean; // ask for user's transfer records
-    messages?: boolean; // allow rebot represent you to send message
+    messages?: boolean; // allow bot represent you to send message
   };
 
   type LoginParams = {
