[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.2.4

--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -13,7 +13,7 @@
 | getContext | 在 mixin app 内获取上下文对象 | `function()` | - |  |
 | reloadTheme | 重载 mixin 的主体色 | `function()` | - |  |
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
-| payment | 通过生成 schema-url 来唤起支付 | `function(params: PARAMS_PAYMENT)` | - |  |
+| payment | 通过生成 scheme-url 来唤起支付 | `function(params: PARAMS_PAYMENT)` | - |  |
 
 ### version
 jsbridge-sdk 的版本号
@@ -168,7 +168,7 @@ conversation id 实际上是通过 getContext 获取的
   ```
 
 ### payment
-通过生成 schema-url 来唤起支付
+通过生成 scheme-url 来唤起支付
 
 - 参数类型
   ```typescript
