--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -13,7 +13,7 @@
 | getContext | get mixin app context | `function()` | - |  |
 | reloadTheme | reload the theme according to theme-color | `function()` | - |  |
 | playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
-| payment | evoke payment checkout by generate pay schema-url | `function(params: PARAMS_PAYMENT)` | - |  |
+| payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT)` | - |  |
 
 ### version
 the jsbridge-sdk version
@@ -165,7 +165,7 @@ Play audio(s) by mixin native player
   ```
 
 ### payment
-evoke payment checkout by generate pay schema-url
+evoke payment checkout by generate pay scheme-url
 
 - types
   ```typescript
