[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.2.5

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -14,6 +14,7 @@
 | reloadTheme | reload the theme according to theme-color | `function()` | - |  |
 | playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
 | payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT)` | - |  |
+| transfer | evoke transfer checkout by generate pay scheme-url | `function(recipient: string)` | - |  |
 
 ### version
 the jsbridge-sdk version
@@ -187,4 +188,12 @@ evoke payment checkout by generate pay scheme-url
     asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
     amount: '0.001'
   });
+  ```
+
+### transfer
+evoke transfer checkout by generate pay scheme-url
+
+- example
+  ```typescript
+  bridge.transfer('a753e0eb-1111-2222-3333-a7bda9993f62');
   ```
