--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -13,7 +13,8 @@
 | getContext | 在 mixin app 内获取上下文对象 | `function()` | - |  |
 | reloadTheme | 重载 mixin 的主体色 | `function()` | - |  |
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
-| payment | 通过生成 scheme-url 来唤起支付 | `function(params: PARAMS_PAYMENT)` | - |  |
+| payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT)` | - |  |
+| transfer | 通过生成 scheme-url 来唤起转账面板 | `function(recipient: string)` | - |  |
 
 ### version
 jsbridge-sdk 的版本号
@@ -168,7 +169,7 @@ conversation id 实际上是通过 getContext 获取的
   ```
 
 ### payment
-通过生成 scheme-url 来唤起支付
+通过生成 scheme-url 来唤起支付面板
 
 - 参数类型
   ```typescript
@@ -190,4 +191,12 @@ conversation id 实际上是通过 getContext 获取的
     asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
     amount: '0.001'
   });
+  ```
+
+### transfer
+通过生成 scheme-url 来唤起转账面板
+
+- example
+  ```typescript
+  bridge.transfer('a753e0eb-1111-2222-3333-a7bda9993f62');
   ```
