update: payment and transfer reture schema url

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -13,8 +13,8 @@
 | getContext | get mixin app context | `function()` | - |  |
 | reloadTheme | reload the theme according to theme-color | `function()` | - |  |
 | playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
-| payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT)` | - |  |
-| transfer | evoke transfer checkout by generate pay scheme-url | `function(recipient: string)` | - |  |
+| payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT): string | undefined` | - |  |
+| transfer | evoke transfer checkout by generate pay scheme-url | `function(recipient: string): string | undefined` | - |  |
 
 ### version
 the jsbridge-sdk version
