--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -13,8 +13,8 @@
 | getContext | 在 mixin app 内获取上下文对象 | `function()` | - |  |
 | reloadTheme | 重载 mixin 的主体色 | `function()` | - |  |
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
-| payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT)` | - |  |
-| transfer | 通过生成 scheme-url 来唤起转账面板 | `function(recipient: string)` | - |  |
+| payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT): string | undefined` | - |  |
+| transfer | 通过生成 scheme-url 来唤起转账面板 | `function(recipient: string): string | undefined` | - |  |
 
 ### version
 jsbridge-sdk 的版本号
