[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.2.13

--- a/packages/sdk/docs/1.md
+++ b/packages/sdk/docs/1.md
@@ -1,12 +1,17 @@
 # Quick Start
 
-## Install
+## Usage with NPM
+### Install
 
 ```shell
 yarn add @foxone/mixin-sdk-jsbridge
+
+# or
+
+npm install --save @foxone/mixin-sdk-jsbridge
 ```
 
-## Usage
+### Usage
 `src/index.ts`：
 ```typescript
 import Bridge from '@foxone/mixin-sdk-jsbridge';
@@ -18,4 +23,34 @@ const bridge = new Bridge({
 bridge.getContext();
 
 // ……
+```
+
+## Usage with CDN
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello MXBridge</title>
+  </head>
+  <body>
+    <button onclick="goLogin()">login</button>
+  </body>
+  <script src="https://unpkg.com/@foxone/mixin-sdk-jsbridge@latest/umd/mixin.bridge.min.js"></script>
+  <script>
+    function goLogin () {
+      const { Bridge } = $MXBridge;
+      const bridge = new Bridge({
+        client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d'
+      });
+      bridge.login({
+        phone: true,
+        assets: true
+      })
+    }
+  </script>
+</html>
 ```
