feat: add code and codeVerifier getter

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -3,6 +3,8 @@
 | name | desc | type | default | version |
 | --- | --- | --- | --- | --- |
 | version | the jsbridge-sdk version | `string` | `unknown` |  |
+| code | get the code which be used to get access-token | `string` | `undefined` |  |
+| codeVerifier | get the code-verifier which be used to get access-token | `string` | `undefined` |  |
 | conversationId | the conversation id | `string` | `undefined` |  |
 | isMixin | judgement whether or not in mixin or reborn app | `boolean` | - |  |
 | login | go login | `function(auth: AUTH, params?: LoginParams)` | - |  |
@@ -12,7 +14,7 @@
 | getUserInfo | get user infomations | `function(token?: string)` | - |  |
 | getContext | get mixin app context | `function()` | - |  |
 | reloadTheme | reload the theme according to theme-color | `function()` | - |  |
-| playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
+| playlist | play audio by mixin native player | `function(src: string[])` | - | mixin >= `0.3.0` |
 | payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT): string | undefined` | - |  |
 | transfer | evoke transfer checkout by generate pay scheme-url | `function(recipient: string): string | undefined` | - |  |
 
@@ -22,6 +24,22 @@ the jsbridge-sdk version
 - example
   ```typescript
   console.info(bridge.version); // 0.1.3
+  ```
+
+### code
+the code which used to get access-token
+
+- example
+  ```typescript
+  console.info(bridge.code); // 550a98ce9095e3ca65ff0e3d9871a4b3dfda338e65c04e8afc4aeb71254d67e5
+  ```
+
+### codeVerifier
+the code-verifier which used to get access-token
+
+- example
+  ```typescript
+  console.info(bridge.codeVerifier); // OWVicDNpenVKVzRlNmFBUUhUOUlHakJzODhQeVZHNFE
   ```
 
 ### conversationId
