--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -4,6 +4,8 @@
 | --- | --- | --- | --- | --- |
 | version | jsbridge-sdk 的版本号 | `string` | `unknown` |  |
 | conversationId | conversation id | `string` | `undefined` |  |
+| code | code 通常用于获取 access-token | `string` | `undefined` |  |
+| codeVerifier | code-verifier 通常用于获取 access-token | `string` | `undefined` |  |
 | isMixin | 判断是否在 mixin 或者 reborn App 内 | `boolean` | - |  |
 | login | 跳转到 OAuth认证页 去登陆 | `function(auth: AUTH, params?: LoginParams)` | - |  |
 | logout | 登出 | `function(reload = true)` | - |  |
@@ -22,6 +24,22 @@ jsbridge-sdk 的版本号
 - 使用示例
   ```typescript
   console.info(bridge.version); // 0.1.3
+  ```
+
+### code
+code 通常用于获取 access-token
+
+- 使用示例
+  ```typescript
+  console.info(bridge.code); // 550a98ce9095e3ca65ff0e3d9871a4b3dfda338e65c04e8afc4aeb71254d67e5
+  ```
+
+### codeVerifier
+code-verifier 通常用于获取 access-token
+
+- 使用示例
+  ```typescript
+  console.info(bridge.codeVerifier); // OWVicDNpenVKVzRlNmFBUUhUOUlHakJzODhQeVZHNFE
   ```
 
 ### conversationId
