update: login code_challenge

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -77,6 +77,7 @@ Jump to the OAuth page, ask the user authorization confirm, and then redirect ba
     client_id?: string; // the client id which can be found at mixin developer platform
     redirect_url?: string; // redirect url
     state?: string; // oauth state
+    code_challenge?: boolean; // whether need code_challenge, default is true
   };
 
   bridge.login(auth: Auth, params?: LoginParams);
