--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -77,6 +77,7 @@ conversation id 实际上是通过 getContext 获取的
     client_id?: string; // client id，可在 mixin 开发者平台中获取
     redirect_url?: string; // 重定向 url
     state?: string; // oauth state
+    code_challenge?: boolean; // 是否需要 code_challenge，默认 true
   };
 
   bridge.login(auth: Auth, params?: LoginParams);
