feat: add share and popup schema

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -17,6 +17,8 @@
 | playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
 | payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT): string \| undefined` | - |  |
 | transfer | evoke transfer checkout by generate pay scheme-url | `function(recipient: string): string \| undefined` | - |  |
+| share | evoke share action by generate share scheme-url | `function(category: CATEGORY_SHARE, params: string | PARAMS_SHARE_CARD | PARAMS_SHARE_LIVE): string \| undefined` | - |  |
+| popup | evoke user or bot's popup by generate scheme-url | `function(type: 'user' | 'bot', params: string | PARAMS_POPUP_BOT): string \| undefined` | - |  |
 
 ### version
 the jsbridge-sdk version
@@ -80,7 +82,7 @@ Jump to the OAuth page, ask the user authorization confirm, and then redirect ba
     code_challenge?: boolean; // whether need code_challenge, default is true
   };
 
-  bridge.login(auth: Auth, params?: LoginParams);
+  bridge.login(auth: Auth, params?: LoginParams): void;
   ```
 
 - example
@@ -126,7 +128,7 @@ Use the `code` which returned by login authorized to exchange for `access-token`
   },  = true
 
   // whether or not make persistence, default is true
-  bridge.requestToken(params?: ReqTokenParams, persistence?: boolean);
+  bridge.requestToken(params?: ReqTokenParams, persistence?: boolean): Promise<string | null>;
   ```
 
 - example
@@ -197,7 +199,7 @@ evoke payment checkout by generate pay scheme-url
     memo?: string | Record<string, string>;
   }
 
-  bridge.payment(params?: PARAMS_PAYMENT);
+  bridge.payment(params?: PARAMS_PAYMENT): string | void;
   ```
 
 - example
@@ -215,4 +217,65 @@ evoke transfer checkout by generate pay scheme-url
 - example
   ```typescript
   bridge.transfer('a753e0eb-1111-2222-3333-a7bda9993f62');
+  ```
+
+### share
+evoke share action by generate share scheme-url
+
+- types
+  ```typescript
+  type PARAMS_SHARE_CARD = {
+    action: string; // the share card url
+    app_id: string; // the app id
+    icon_url?: string; // the share card image url
+    title?: string; // the share card title
+    description?: string; // the share card description
+  };
+
+  type PARAMS_SHARE_LIVE = {
+    url: string; // the live stream url
+    thumb_url?: string; // the thumb image url
+    height?: number; // the live player height
+    width?: number; // the live player weight
+  };
+
+  type CATEGORY_SHARE = 'text' | 'image' | 'contact' | 'app_card' | 'live' | 'post';
+
+  bridge.share(type: 'text', txt: string): string | void;
+  bridge.share(type: 'image', url: string): string | void;
+  bridge.share(type: 'contact', user_id: string): string | void;
+  bridge.share(type: 'post', content: string): string | void;
+  bridge.share(type: 'app_card', params: PARAMS_SHARE_CARD): string | void;
+  bridge.share(type: 'live', params: PARAMS_SHARE_LIVE): string | void;
+  ```
+
+- example
+  ```typescript
+  bridge.share('app_card', {
+    action: 'https://your.share.com',
+    app_id: 'your app id',
+    icon_url: 'https://your.share.com/icon',
+    title: 'Lyric Profile',
+    description: 'From xxx'
+  });
+  ```
+
+### popup
+evoke user or bot's popup by generate scheme-url
+
+- types
+  ```typescript
+  type PARAMS_POPUP_BOT = {
+    app_id: string;
+    action?: 'open';
+    [props: string]: any;
+  }
+
+  bridge.popup(type: 'user', params: string): string | undefined;
+  bridge.popup(type: 'bot', params: PARAMS_POPUP_BOT): string | undefined;
+  ```
+
+- example
+  ```typescript
+  bridge.popup('user', 'user id');
   ```
