--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -17,6 +17,8 @@
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
 | payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT): string \| undefined` | - |  |
 | transfer | 通过生成 scheme-url 来唤起转账面板 | `function(recipient: string): string \| undefined` | - |  |
+| share | 通过生成 scheme-url 来唤起App内分享 | `function(category: CATEGORY_SHARE, params: string | PARAMS_SHARE_CARD | PARAMS_SHARE_LIVE): string \| undefined` | - |  |
+| popup | 通过生成 scheme-url 来唤起用户/机器人的主页 | `function(type: 'user' | 'bot', params: string | PARAMS_POPUP_BOT): string \| undefined` | - |  |
 
 ### version
 jsbridge-sdk 的版本号
@@ -80,7 +82,7 @@ conversation id 实际上是通过 getContext 获取的
     code_challenge?: boolean; // 是否需要 code_challenge，默认 true
   };
 
-  bridge.login(auth: Auth, params?: LoginParams);
+  bridge.login(auth: Auth, params?: LoginParams): void;
   ```
 
 - 使用示例
@@ -128,7 +130,7 @@ conversation id 实际上是通过 getContext 获取的
   };
 
   // persistence 是否做持久化，默认 true
-  bridge.requestToken(params?: ReqTokenParams, persistence?: boolean);
+  bridge.requestToken(params?: ReqTokenParams, persistence?: boolean): Promise<string | null>;
   ```
 
 - 使用示例
@@ -200,7 +202,7 @@ conversation id 实际上是通过 getContext 获取的
     memo?: string | Record<string, string>;
   }
 
-  bridge.payment(params?: PARAMS_PAYMENT);
+  bridge.payment(params?: PARAMS_PAYMENT): string | void;
   ```
 
 - 使用示例
@@ -215,7 +217,68 @@ conversation id 实际上是通过 getContext 获取的
 ### transfer
 通过生成 scheme-url 来唤起转账面板
 
-- example
+- 使用示例
   ```typescript
   bridge.transfer('a753e0eb-1111-2222-3333-a7bda9993f62');
+  ```
+
+### share
+通过生成 scheme-url 来唤起App内分享
+
+- 参数类型
+  ```typescript
+  type PARAMS_SHARE_CARD = {
+    action: string; // 分享卡片的地址
+    app_id: string; // app id
+    icon_url?: string; // 分享卡片的图标地址
+    title?: string; // 分享卡片的标题
+    description?: string; // 分享卡片的描述
+  };
+
+  type PARAMS_SHARE_LIVE = {
+    url: string; // 直播的地址
+    thumb_url?: string; // 直播的图标地址
+    height?: number; // 直播播放器的高度
+    width?: number; // 直播播放器的宽度
+  };
+
+  type CATEGORY_SHARE = 'text' | 'image' | 'contact' | 'app_card' | 'live' | 'post';
+
+  bridge.share(type: 'text', txt: string): string | void;
+  bridge.share(type: 'image', url: string): string | void;
+  bridge.share(type: 'contact', user_id: string): string | void;
+  bridge.share(type: 'post', content: string): string | void;
+  bridge.share(type: 'app_card', params: PARAMS_SHARE_CARD): string | void;
+  bridge.share(type: 'live', params: PARAMS_SHARE_LIVE): string | void;
+  ```
+
+- 使用示例
+  ```typescript
+  bridge.share('app_card', {
+    action: 'https://your.share.com',
+    app_id: 'your app id',
+    icon_url: 'https://your.share.com/icon',
+    title: 'Lyric的个人主页',
+    description: '来自定投人生课堂'
+  });
+  ```
+
+### popup
+通过生成 scheme-url 来唤起用户/机器人的主页
+
+- 参数类型
+  ```typescript
+  type PARAMS_POPUP_BOT = {
+    app_id: string;
+    action?: 'open';
+    [props: string]: any;
+  }
+
+  bridge.popup(type: 'user', params: string): string | undefined;
+  bridge.popup(type: 'bot', params: PARAMS_POPUP_BOT): string | undefined;
+  ```
+
+- 使用示例
+  ```typescript
+  bridge.popup('user', 'user id');
   ```
