[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.3.0-1

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -17,8 +17,8 @@
 | playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
 | payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT): string \| undefined` | - |  |
 | transfer | evoke transfer checkout by generate pay scheme-url | `function(recipient: string): string \| undefined` | - |  |
-| share | evoke share action by generate share scheme-url | `function(category: CATEGORY_SHARE, params: string | PARAMS_SHARE_CARD | PARAMS_SHARE_LIVE): string \| undefined` | - |  |
-| popup | evoke user or bot's popup by generate scheme-url | `function(type: 'user' | 'bot', params: string | PARAMS_POPUP_BOT): string \| undefined` | - |  |
+| share | evoke share action by generate share scheme-url | `function(category: CATEGORY_SHARE, params: string \| PARAMS_SHARE_CARD \| PARAMS_SHARE_LIVE): string \| undefined` | - |  |
+| popup | evoke user or bot's popup by generate scheme-url | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - |  |
 
 ### version
 the jsbridge-sdk version
