--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -17,8 +17,8 @@
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
 | payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT): string \| undefined` | - |  |
 | transfer | 通过生成 scheme-url 来唤起转账面板 | `function(recipient: string): string \| undefined` | - |  |
-| share | 通过生成 scheme-url 来唤起App内分享 | `function(category: CATEGORY_SHARE, params: string | PARAMS_SHARE_CARD | PARAMS_SHARE_LIVE): string \| undefined` | - |  |
-| popup | 通过生成 scheme-url 来唤起用户/机器人的主页 | `function(type: 'user' | 'bot', params: string | PARAMS_POPUP_BOT): string \| undefined` | - |  |
+| share | 通过生成 scheme-url 来唤起App内分享 | `function(category: CATEGORY_SHARE, params: string \| PARAMS_SHARE_CARD \| PARAMS_SHARE_LIVE): string \| undefined` | - |  |
+| popup | 通过生成 scheme-url 来唤起用户/机器人的主页 | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - |  |
 
 ### version
 jsbridge-sdk 的版本号
