[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.3.0-3

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -199,7 +199,7 @@ evoke payment checkout by generate pay scheme-url
     memo?: string | Record<string, string>;
   }
 
-  bridge.payment(params?: PARAMS_PAYMENT): string | void;
+  bridge.payment(params?: PARAMS_PAYMENT): string | undefined;
   ```
 
 - example
@@ -241,12 +241,12 @@ evoke share action by generate share scheme-url
 
   type CATEGORY_SHARE = 'text' | 'image' | 'contact' | 'app_card' | 'live' | 'post';
 
-  bridge.share(type: 'text', txt: string): string | void;
-  bridge.share(type: 'image', url: string): string | void;
-  bridge.share(type: 'contact', user_id: string): string | void;
-  bridge.share(type: 'post', content: string): string | void;
-  bridge.share(type: 'app_card', params: PARAMS_SHARE_CARD): string | void;
-  bridge.share(type: 'live', params: PARAMS_SHARE_LIVE): string | void;
+  bridge.share(type: 'text', txt: string): string | undefined;
+  bridge.share(type: 'image', url: string): string | undefined;
+  bridge.share(type: 'contact', user_id: string): string | undefined;
+  bridge.share(type: 'post', content: string): string | undefined;
+  bridge.share(type: 'app_card', params: PARAMS_SHARE_CARD): string | undefined;
+  bridge.share(type: 'live', params: PARAMS_SHARE_LIVE): string | undefined;
   ```
 
 - example
@@ -277,5 +277,5 @@ evoke user or bot's popup by generate scheme-url
 
 - example
   ```typescript
-  bridge.popup('user', 'user id');
+  bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
   ```
