--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -202,7 +202,7 @@ conversation id 实际上是通过 getContext 获取的
     memo?: string | Record<string, string>;
   }
 
-  bridge.payment(params?: PARAMS_PAYMENT): string | void;
+  bridge.payment(params?: PARAMS_PAYMENT): string | undefined;
   ```
 
 - 使用示例
@@ -244,12 +244,12 @@ conversation id 实际上是通过 getContext 获取的
 
   type CATEGORY_SHARE = 'text' | 'image' | 'contact' | 'app_card' | 'live' | 'post';
 
-  bridge.share(type: 'text', txt: string): string | void;
-  bridge.share(type: 'image', url: string): string | void;
-  bridge.share(type: 'contact', user_id: string): string | void;
-  bridge.share(type: 'post', content: string): string | void;
-  bridge.share(type: 'app_card', params: PARAMS_SHARE_CARD): string | void;
-  bridge.share(type: 'live', params: PARAMS_SHARE_LIVE): string | void;
+  bridge.share(type: 'text', txt: string): string | undefined;
+  bridge.share(type: 'image', url: string): string | undefined;
+  bridge.share(type: 'contact', user_id: string): string | undefined;
+  bridge.share(type: 'post', content: string): string | undefined;
+  bridge.share(type: 'app_card', params: PARAMS_SHARE_CARD): string | undefined;
+  bridge.share(type: 'live', params: PARAMS_SHARE_LIVE): string | undefined;
   ```
 
 - 使用示例
@@ -280,5 +280,5 @@ conversation id 实际上是通过 getContext 获取的
 
 - 使用示例
   ```typescript
-  bridge.popup('user', 'user id');
+  bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
   ```
