update: share card icon url is required

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -227,7 +227,7 @@ evoke share action by generate share scheme-url
   type PARAMS_SHARE_CARD = {
     action: string; // the share card url
     app_id: string; // the app id
-    icon_url?: string; // the share card image url
+    icon_url: string; // the share card image url
     title?: string; // the share card title
     description?: string; // the share card description
   };
