--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -230,7 +230,7 @@ conversation id 实际上是通过 getContext 获取的
   type PARAMS_SHARE_CARD = {
     action: string; // 分享卡片的地址
     app_id: string; // app id
-    icon_url?: string; // 分享卡片的图标地址
+    icon_url: string; // 分享卡片的图标地址
     title?: string; // 分享卡片的标题
     description?: string; // 分享卡片的描述
   };
