docs: update annotations

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -266,9 +266,9 @@ evoke user or bot's popup by generate scheme-url
 - types
   ```typescript
   type PARAMS_POPUP_BOT = {
-    app_id: string;
-    action?: 'open';
-    [props: string]: any;
+    app_id: string; // the bot url
+    action?: 'open'; // always open the bot pop-up window
+    [props: string]: any; // parameters of any name or type can be passed when opening the bot homepage to facilitate the development of features like invitation codes
   }
 
   bridge.popup(type: 'user', params: string): string | undefined;
