--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -269,9 +269,9 @@ conversation id 实际上是通过 getContext 获取的
 - 参数类型
   ```typescript
   type PARAMS_POPUP_BOT = {
-    app_id: string;
-    action?: 'open';
-    [props: string]: any;
+    app_id: string; // 机器人的地址
+    action?: 'open'; // 总是会打开机器人弹窗，无论当前是否已经存
+    [props: string]: any; // 在打开机器人主页时，可以传递的参数，以便于开发邀请代码等功能
   }
 
   bridge.popup(type: 'user', params: string): string | undefined;
