chore: popup typescript update

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -271,7 +271,7 @@ evoke user or bot's popup by generate scheme-url
     [props: string]: any; // parameters of any name or type can be passed when opening the bot homepage to facilitate the development of features like invitation codes
   }
 
-  bridge.popup(type: 'user', params: string): string | undefined;
+  bridge.popup(type: 'user', user_id: string): string | undefined;
   bridge.popup(type: 'bot', params: PARAMS_POPUP_BOT): string | undefined;
   ```
 
