--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -274,7 +274,7 @@ conversation id 实际上是通过 getContext 获取的
     [props: string]: any; // 在打开机器人主页时，可以传递的参数，以便于开发邀请代码等功能
   }
 
-  bridge.popup(type: 'user', params: string): string | undefined;
+  bridge.popup(type: 'user', user_id: string): string | undefined;
   bridge.popup(type: 'bot', params: PARAMS_POPUP_BOT): string | undefined;
   ```
 
