feat: support log level and debug option at initial phase

--- a/packages/sdk/docs/1.md
+++ b/packages/sdk/docs/1.md
@@ -44,7 +44,8 @@ bridge.getContext();
     function goLogin () {
       const { Bridge } = $MXBridge;
       const bridge = new Bridge({
-        client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d'
+        client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d', // Fill your mixin bot id in here
+        logLevel: 'warn' // The log level which can be 'detail' | 'info' | 'warn' | 'error' | 'silent'
       });
       bridge.login({
         phone: true,
