--- a/packages/sdk/docs/1.md
+++ b/packages/sdk/docs/1.md
@@ -17,7 +17,8 @@ npm install --save @foxone/mixin-sdk-jsbridge
 import Bridge from '@foxone/mixin-sdk-jsbridge';
 
 const bridge = new Bridge({
-  client_id: 'your mixin bot id'
+  client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d', // Fill your mixin bot id in here
+  logLevel: 'warn' // The log level which can be 'detail' | 'info' | 'warn' | 'error' | 'silent'
 });
 
 bridge.getContext();
