--- a/packages/sdk/docs/1.zh-CN.md
+++ b/packages/sdk/docs/1.zh-CN.md
@@ -45,7 +45,8 @@ bridge.getContext();
     function goLogin () {
       const { Bridge } = $MXBridge;
       const bridge = new Bridge({
-        client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d'
+        client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d', // 此处填你的 mixin 机器人 id
+        logLevel: 'warn' // 日志输出等级 'detail' | 'info' | 'warn' | 'error' | 'silent'
       });
       bridge.login({
         phone: true,
